[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for Eigen. Eigen is a C++ template library for linear algebra: matrices, vectors, numerical solvers, and related algorithms."
license = "Apache-2.0"
name = "cmeel-eigen"
requires-python = ">= 3.7"
version = "3.4.0.1"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-eigen"
repository = "https://github.com/cmake-wheel/cmeel-eigen.git"

[tool.cmeel]
any = true
build-number = 6
check-relocatable = false
run-tests = false
source = "eigen"

[tool.tomlsort]
all = true
